feat: integrate Ilian mean implementation
